# Microcosm

./: .gitattributes  .gitignore  LICENSE  README.md  index-beta.html  index.html
.cargo/: config.toml
src/: main-beta.js  main.js
src/render/: canvas.js  quad.vert.glsl
src/rust/: Cargo.toml  microcosm.wasm
src/rust/cli/: Cargo.toml
src/rust/cli/src/: main.rs
src/rust/core/: Cargo.toml
src/rust/core/src/: bio.rs  cell.rs  chem.rs  config.rs  genome.rs  lib.rs  molecule.rs  render_buffers.rs  rng.rs  snapshot.rs  stats.rs  world.rs
src/rust/wasm/: Cargo.toml
src/rust/wasm/src/: lib.rs
src/sim/: bio.js  cell.js  chem.js  eco.js  rng.js  world.js
src/styles/: main-beta.css  main.css
src/wasmgpu/: bridge.js  gui.js  interact.js  render.js  runtime.js
