[package]
name = "microcosm-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "microcosmwasm"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
microcosm-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
